# cmux-beyond

./: .gitmodules  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  PROJECTS.md  Package.resolved  README.ar.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.km.md  README.ko.md  README.md  README.no.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  TODO.md  package-lock.json  package.json
.claude/commands/: release-local.md  release-nightly.md  release.md
.github/workflows/: rust-build.yml
Sources/: AppDelegate.rs  AppIconDockTilePlugin.rs  AppleScriptSupport.rs  Backport.rs  BrowserWindowPortal.rs  CmuxConfig.rs  CmuxConfigExecutor.rs  CmuxDirectoryTrust.rs  ContentView.rs  GhosttyConfig.rs  GhosttyTerminalView.rs  KeyboardLayout.rs  KeyboardShortcutSettings.rs  KeyboardShortcutSettingsFileStore.rs  NotificationsPage.rs  PortScanner.rs  PostHogAnalytics.rs  RemoteRelayZshBootstrap.rs  SentryHelper.rs  SessionPersistence.rs  SidebarSelectionState.rs  SocketControlSettings.rs  TabManager.rs  TerminalController.rs  TerminalImageTransfer.rs  TerminalNotificationStore.rs  TerminalSSHSessionDetector.rs  TerminalView.rs  TerminalWindowPortal.rs  UITestRecorder.rs  WindowAccessor.rs  WindowDecorationsController.rs  WindowDragHandleView.rs  WindowToolbarController.rs  Workspace.rs  WorkspaceContentView.rs  cmuxApp.rs
cmux-rs/: .gitignore  Cargo.toml  README.md
cmux-rs/crates/cmux-app/: Cargo.toml  tauri.conf.json
cmux-rs/crates/cmux-app/src/: browser.rs  commands.rs  main.rs  notifications.rs  ports.rs  sources.rs  state.rs  terminal.rs
cmux-rs/crates/cmux-core/: Cargo.toml
cmux-rs/crates/cmux-core/src/: bonsplit.rs  browser.rs  config.rs  lib.rs  notifications.rs  pane.rs  ports.rs  socket.rs  tab.rs  terminal.rs  workspace.rs
cmux-rs/crates/cmux-core/src/bonsplit/: controller.rs  layout.rs  model.rs  types.rs
cmux-rs/crates/cmux-core/src/config/: cmux.rs  ghostty.rs  shortcuts.rs
cmux-rs/crates/cmux-core/src/socket/: dispatch.rs  listener.rs  settings.rs
cmux-rs/crates/cmux-core/src/workspace/: model.rs  session.rs  view.rs
cmux-rs/crates/cmux-core/tests/: bonsplit_property.rs  session_roundtrip.rs  workspace_view.rs
cmux-rs/crates/cmux-headless/: Cargo.toml
cmux-rs/crates/cmux-headless/src/: handler.rs  main.rs
cmux-rs/ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
cmux-rs/ui/src/: App.tsx  bridge.ts  styles.css
cmux-rs/ui/src/bonsplit/: PaneHost.tsx  README.md  SplitContainer.tsx  TabBar.tsx  bonsplit-types.ts  drag.ts  index.ts
cmux-rs/ui/src/browser/: BrowserPanel.tsx  browser-types.ts  index.ts
cmux-rs/ui/src/notifications/: notification-types.ts
cmux-rs/ui/src/ports/: ports-types.ts
cmux-rs/ui/src/sidebar/: SidebarPanel.tsx
cmux-rs/ui/src/terminal/: TerminalSurface.tsx  index.ts  terminal-types.ts
cmuxTests/: TabManagerUnitTests.swift
docs/: agent-browser-port-spec.md  ghostty-fork.md  notifications.md  remote-daemon-spec.md  socket-focus-steal-audit.todo.md  v2-api-migration.md
web/app/: sitemap.ts
(+87 files in other folders)
