[package]
name = "cmux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "cmux_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
interprocess = { workspace = true }
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
