[package]
name = "cmux-headless"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "cmux-headless"
path = "src/main.rs"

[dependencies]
cmux-core = { path = "../cmux-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
